--- a/css/index.css
+++ b/css/index.css
@@ -198,5 +198,56 @@
 }
 /* 广告 */
 .download{
-    
+    width: 100%;
+    height: 0.5rem;
+    background: rgba(0,0,0,0.5);
+    line-height: 0.5rem;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    padding-left: 0.2rem;
 }
+.download .close{
+    width: 0.14rem;
+    height: 0.15rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.downLft{
+    display: flex;
+    justify-content: space-around;
+    flex: 6;
+    font-size: 0.12rem;
+    color: #fff;
+}
+.downLft .icon img{
+    width: 0.3rem;
+    height: 0.3rem;
+    margin-top: 0.1rem;
+}
+.downLft .text{
+    margin-top: -0.1rem;
+}
+.downLft .text p:nth-of-type(1){
+    height: 0.18rem;
+    font-size: 0.18rem ;
+}
+
+.downLft .text p:nth-of-type(2){
+     height: 0.12rem;
+}
+
+.downRight{
+    background: #ff8a00;
+    flex: 4;
+    line-height:0.5rem ;
+    font-size: 0.16rem;
+    text-align: center;
+}
+.downRight a{
+    color: #fff;
+}
+
+
