--- a/css/find_password.css
+++ b/css/find_password.css
@@ -13,13 +13,13 @@ main>p>span{
     font-weight: 900;
     font-size: .13rem;
 }
-main>form{
+main>#find{
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
 }
-main>form>input{
+main>#find>input{
     width: 100%;
     height: .5rem;
     font-size: .14rem;
@@ -27,16 +27,16 @@ main>form>input{
     border-bottom: 1px solid #ccc;
     box-sizing: border-box;   
 }
-main>form>input:focus{
+main>#find>input:focus{
     outline: none;
 }
-main>form>input:nth-of-type(1),
-main>form>input:nth-of-type(2),
-main>form>input:nth-of-type(3),
-main>form>input:nth-of-type(4){
+main>#find>input:nth-of-type(1),
+main>#find>input:nth-of-type(2),
+main>#find>input:nth-of-type(3),
+main>#find>input:nth-of-type(4){
     padding-left: .3rem;
 }
-main>form>input:nth-of-type(5){
+main>#find>input:nth-of-type(5){
     background-color: #ff8a00;
     color: white;
     width: 95%;
@@ -56,7 +56,7 @@ main #yzm{
     right: .3rem;
     top: .85rem;
 }
-main>form>span{
+main>#find>span{
     display: none;
     border: 1px solid green;
     position: absolute;
@@ -69,12 +69,12 @@ main>form>span{
     left: .05rem;
     top: .15rem;
 }
-main>form>span:nth-of-type(2){
+main>#find>span:nth-of-type(2){
     top: .65rem;
 }
-main>form>span:nth-of-type(3){
+main>#find>span:nth-of-type(3){
     top: 1.15rem;
 }
-main>form>span:nth-of-type(4){
+main>#find>span:nth-of-type(4){
     top: 1.65rem;
 }
