--- a/css/login.css
+++ b/css/login.css
@@ -28,27 +28,27 @@ main>#nav>span{
     height: 100%;
     line-height: .5rem;
 }
-main>form{
+main>.form{
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
 }
-main>form>input{
+main>.form>input{
     width: 100%;
     height: .5rem;
     font-size: .14rem;
     border: none;
     box-sizing: border-box;   
 }
-main>form>input:focus{
+main>.form>input:focus{
     outline: none;
 }
-main>form>input:nth-of-type(1),
-main>form>input:nth-of-type(2){
+main>.form>input:nth-of-type(1),
+main>.form>input:nth-of-type(2){
     padding-left: .3rem;
 }
-main>form>input:nth-of-type(3){
+main>.form>input:nth-of-type(3){
     background-color: #ff8a00;
     color: white;
     width: 95%;
@@ -67,7 +67,7 @@ main #yzm{
     right: .3rem;
     top: 1.5rem;
 }
-main>form>span{
+main>.form>span{
     display: none;
     border: 1px solid green;
     position: absolute;
@@ -80,7 +80,7 @@ main>form>span{
     left: .05rem;
     top: .15rem;
 }
-main>form>.psd{
+main>.form>.psd{
     top: .65rem;
 }
 main>#code{
